Day2-ops/backend-service-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: webapp
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 5678   # ← hashicorp/http-echo는 5678로 리슨함
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: hashicorp/http-echo
          args: ["-text=Hello from Backend"]
          ports:
            - containerPort: 5678
